# minibloq

./: .gitignore  default.nix  flake.nix  meson.build  shell.nix
data/hardware/ArduinoUNO/: board.yml
exe_dir/: Doc  GUI  config
src/: MainFrame.cpp  MainFrame.h  Messages.cpp  MinibloqProperties.cpp  Terminal.cpp  TextEditorProperties.h  default.nix  main.cpp  meson.build
src/Bubble/wxBubble/v1.0/Source/: Bubble.cpp  Bubble.h  BubbleBoardProperties.h  BubbleButton.h  BubbleCombo.cpp  BubbleCombo.h  BubbleHardwareManager.cpp  BubbleHardwareManager.h  BubblePicker.cpp  BubbleProcess.h  BubbleXML.cpp  HardwareSwitcher.hpp
src/HID/v0.10/: hid_LINUX.cpp
src/mubloq/: board.hpp  hardware.cpp  hardware.hpp  meson.build  model.cpp  model.hpp  xml_compat.cpp  xml_compat.hpp
