include = include_directories(
    'CTB/v0.13',
    'CTB/v0.13/include',
    'CTB/v0.13/include/linux',
    'Bubble/wxBubble/v1.0/Source',
    'HID/v0.10',
    '.',
#     'Resources'
)

sources = files(
    'BlockEditorProperties.cpp',
    'BlockEditorProperties.h',
    'Bubble/wxBubble/v1.0/Source/Bubble.cpp',
    'Bubble/wxBubble/v1.0/Source/Bubble.h',
    'Bubble/wxBubble/v1.0/Source/BubbleBlock.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleBlockInfo.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleButton.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleButton.h',
    'Bubble/wxBubble/v1.0/Source/BubbleCanvas.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleCanvas.h',
    'Bubble/wxBubble/v1.0/Source/BubbleCanvasInfo.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleCombo.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleCombo.h',
    'Bubble/wxBubble/v1.0/Source/BubbleComponentsManager.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleComponentsManager.h',
    'Bubble/wxBubble/v1.0/Source/BubbleEditor.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleEditor.h',
    'Bubble/wxBubble/v1.0/Source/BubbleHardwareManager.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleHardwareManager.h',
    'Bubble/wxBubble/v1.0/Source/BubbleInstance.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleInstanceManager.cpp',
    'Bubble/wxBubble/v1.0/Source/BubblePanel.cpp',
    'Bubble/wxBubble/v1.0/Source/BubblePanel.h',
    'Bubble/wxBubble/v1.0/Source/BubbleParam.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleParamInfo.cpp',
    'Bubble/wxBubble/v1.0/Source/BubblePicker.cpp',
    'Bubble/wxBubble/v1.0/Source/BubblePicker.h',
    'Bubble/wxBubble/v1.0/Source/BubblePrintout.cpp',
    'Bubble/wxBubble/v1.0/Source/BubblePrintout.h',
    'Bubble/wxBubble/v1.0/Source/BubbleProcess.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleProcess.h',
    'Bubble/wxBubble/v1.0/Source/BubbleVariablesManager.cpp',
    'Bubble/wxBubble/v1.0/Source/BubbleVariablesManager.h',
    'Bubble/wxBubble/v1.0/Source/BubbleXML.cpp',
    'Bubble/wxBubble/v1.0/Source/IBubbleFileIO.h',
    'CTB/v0.13/src/fifo.cpp',
    'CTB/v0.13/src/iobase.cpp',
    'CTB/v0.13/src/kbhit.cpp',
    'CTB/v0.13/src/linux/serport.cpp',
    'CTB/v0.13/src/linux/timer.cpp',
    'CTB/v0.13/src/portscan.cpp',
    'ComponentProperties.cpp',
    'ComponentProperties.h',
    'MainFrame.cpp',
    'MainFrame.h',
    'Messages.cpp',
    'Messages.h',
    'MinibloqProperties.cpp',
    'MinibloqProperties.h',
    'Terminal.cpp',
    'Terminal.h',
    'TerminalProperties.cpp',
    'TerminalProperties.h',
    'TextEditorProperties.cpp',
    'TextEditorProperties.h',
    'main.cpp',
    'HID/v0.10/hid_LINUX.cpp',
)

subdir('mubloq')